including recent changes

--- a/doc/api/ruby/doc/css/rdoc.css
+++ b/doc/api/ruby/doc/css/rdoc.css
@@ -1,6 +1,6 @@
 /*
  * "Darkfish" Rdoc CSS
- * $Id: rdoc.css,v 1.5 2016-03-15 06:52:34 mused Exp $
+ * $Id: rdoc.css,v 1.5 2016/03/15 06:52:34 mused Exp $
  *
  * Author: Michael Granger <ged@FaerieMUD.org>
  *
