--- a/doc/api/ruby/doc/rdoc.css
+++ b/doc/api/ruby/doc/rdoc.css
@@ -1,6 +1,6 @@
 /*
  * "Darkfish" Rdoc CSS
- * $Id: rdoc.css,v 1.2 2014-09-29 23:24:52 mused Exp $
+ * $Id: rdoc.css,v 1.2 2014/09/29 23:24:52 mused Exp $
  *
  * Author: Michael Granger <ged@FaerieMUD.org>
  *
